# Floor-Plan-Management-System-BACKEND

./: .env.example  .gitignore  README.md  egun el actual (opcion binaria)  enviromentFormat.txt  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
data_diagram/: PlantUML Editor Code.txt
models/: models..json  models.json
scripts/: create-superuser.js  inference_engine.py  yolo_inference.py
src/: app.controller.ts  app.module.ts  main.ts
src/ai-processing/: ai-processing.controller.ts  ai-processing.service.ts
src/auth/: auth.module.ts  auth.service.ts
src/blueprint/: blueprint.controller.ts  blueprint.module.ts  blueprint.service.ts
src/common/: maximumBlueprintsCount.ts  orgPermission.enum.ts  role.enum.ts
src/file-storage/: file-storage.module.ts  file-storage.service.ts
src/inference-job/: inference-job.controller.ts  inference-job.gateway.ts  inference-job.module.ts  inference-job.service.ts
src/invitation/: invitation.controller.ts  invitation.module.ts  invitation.service.ts
src/jwt/: jwt.module.ts  jwt.strategy.ts
src/organization/: organization.controller.ts  organization.module.ts  organization.service.ts
src/organization_membership/: organization_membership.controller.spec.ts  organization_membership.controller.ts  organization_membership.module.ts  organization_membership.service.spec.ts  organization_membership.service.ts
src/project/: project.controller.ts  project.module.ts  project.service.ts
src/project_membership/: project_membership.controller.spec.ts  project_membership.controller.ts  (+3 more)
(+55 files in other folders)
