[project]
name = "floor-plan-management-system-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sahi>=0.11.36",
    "ultralytics>=8.4.47",
    "gdown>=5.0.0",
    "opencv-python>=4.9.0",   # Standard for image handling
    "python-dotenv>=1.0.0",   # For environment secrets
    "pydantic>=2.0.0"         # Highly recommended for validating your models.json
]

